// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component matches snapshot (checked) 1`] = `
<div
  className="fdsCheckable fdsRadio"
>
  <label
    className="flush--bottom"
  >
    <input
      className="media--xs"
      name="snapshot-radio"
      type="radio"
      value="test-value"
    />
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--s"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Radio component matches snapshot (disabled) 1`] = `
<div
  className="fdsCheckable--disabled fdsCheckable fdsRadio"
>
  <label
    className="flush--bottom"
  >
    <input
      className="media--xs"
      name="snapshot-radio"
      type="radio"
      value="test-value"
    />
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--s"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Radio component matches snapshot 1`] = `
<div
  className="fdsCheckable fdsRadio"
>
  <label
    className="flush--bottom"
  >
    <input
      className="media--xs"
      name="snapshot-radio"
      type="radio"
      value="test-value"
    />
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--s"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;
